--- a/styles.css
+++ b/styles.css
@@ -118,6 +118,10 @@ body {
     align-items: center;
 }
 
+.right-title div:first-child {
+    border: none;
+}
+
 .document-name {
     color: var(--text2);
     font-style: italic;
@@ -190,4 +194,161 @@ footer {
 
 .lines:hover, .lines:focus, .lines:active, .error:hover, .error:focus, .error:active {
     opacity: 1;
+}
+
+@keyframes popupOpen {
+    0% {
+        transform: scale(0);
+    }
+    100% {
+        transform: scale(1);
+    }
+}
+
+.settings-modal {
+    font-family: var(--main-font);
+    background-color: var(--blue2);
+    width: clamp(400px, 80dvw, 750px);
+    color: var(--text2);
+    border: none;
+    border-radius: 1em;
+    padding: 1em 2.5em;
+    box-sizing: border-box;
+    animation: popupOpen 0.25s;
+}
+
+.settings-modal::backdrop {
+    background-color: hsla(213, 96%, 11%, 60%);
+}
+
+.settings-modal div {
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+}
+
+.settings-modal .settings-close {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 1em 0 1em 0;
+}
+
+.settings-modal .settings-close h1 {
+    margin: 0;
+}
+
+.settings-modal .settings-close button {
+    border: none;
+    outline: none;
+    border-radius: 1em;
+    padding: 0.75em;
+    background-color: var(--blue2);
+    cursor: pointer;
+}
+
+.settings-modal .settings-close button:hover {
+    background-color: var(--blue3);
+}
+
+.settings-modal div .settings-heading h2 {
+    margin: 0;
+    margin-bottom: 0.25em;
+}
+
+.settings-modal div .settings-heading p {
+    padding: 0;
+    margin-top: 0;
+    font-size: 0.95em;
+}
+
+.settings-modal div .settings-item {
+    display: flex;
+}
+
+.settings-modal div .settings-item .settings-title {
+    width: 30%;
+} 
+
+.settings-modal div .settings-item .settings-input {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 1em;
+    overflow: visible;
+}
+
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 44px;
+    height: 20px;
+    cursor: pointer;
+}
+  
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 2px;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: var(--text3);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 24px;
+    width: 24px;
+    left: -1px;
+    top: -3px;
+    background-color: var(--text2);
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+input:checked + .slider {
+    background-color: #1c5192;
+}
+
+input:checked + .slider::before {
+    background-color: var(--text1);
+}
+
+input:checked + .slider:before {
+    -webkit-transform: translateX(24px);
+    -ms-transform: translateX(24px);
+    transform: translateX(24px);
+}
+
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+@keyframes popupClose {
+    0% {
+        transform: scale(1);
+    }
+    100% {
+        transform: scale(0);
+    }
+}
+
+.closePopup {
+    animation: popupClose 0.25s;
 }
