--- a/styles.css
+++ b/styles.css
@@ -431,3 +431,14 @@ input:checked + .slider:before {
     font-family: var(--editor-font);
     font-size: 0.75em;
 }
+
+.title-bar button:disabled {
+    background-color: var(--blue2);
+    color: var(--text3);
+    cursor: not-allowed;
+    opacity: 0.3;
+}
+
+.title-bar button:disabled:hover {
+    background-color: var(--blue2);
+}
