--- a/splash.css
+++ b/splash.css
@@ -1,16 +1,34 @@
 :root {
-    --blue1: #213A57; /* border */
-    --blue2: #112A47; /* text editor bg */
-    --blue3: #011936; /* menu bar */
-    --text1: #8CBCB9; /* selected file title and highlight */
-    --text2: #A4B2B5; /* text editor */
-    --text3: #415A77; /* number sa kilid */
-  }
+  --blue1: #213A57; /* border */
+  --blue2: #112A47; /* text editor bg */
+  --blue3: #011936; /* menu bar */
+  --text1: #8CBCB9; /* selected file title and highlight */
+  --text2: #A4B2B5; /* text editor */
+  --text3: #415A77; /* number sa kilid */
+}
 
 body {
-    padding: 0;
-    margin: 0;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background-color: var(--blue3);
 }
+
+#splash-container {
+  text-align: center;
+}
+
+#splash-image {
+  width: 80%; /*Adjust the size of the splash image */
+  /* max-width: 500px; */
+  /* margin-bottom: 1px; */
+}
+
+#loading-gif {
+  width: 75px; /* Adjust the size of the loading gif */
+  height: auto;
+}
+
